--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h2 class="text-center text-uppercase text-secondary">Who am I...</h2>
           <div class="row mt-5">
             <div class="col-lg-4 ml-auto">
-              <p class="lead">I am a Management Engineering student, and I have been captivated by software development since I built and released my first Android application in grade 12. A majority of my development experience has been in Java and Kotlin but I am quickly being exposed to new languages and frameworks while tackeling new projects.</p>
+              <p class="lead">I am a Management Engineering student at the University of Waterloo, and I have been captivated by software development since I built and released my first Android application in grade 12. The majority of my development experience has been in Java and Kotlin but I am quickly being exposed to new languages and frameworks while tackling new projects.</p>
             </div>
             <div class="col-lg-4 mr-auto">
               <p class="lead">I have had many ambitions throughout my life. In the 8th grade I wanted to become a famous guitarist, but my dreams were crushed when my band mates moved away to different schools. My newest, and more realistic goal, is to pursue a career in Solutions Architecture. I enjoy this field since it will allow me the opportunity to be creative and learn new technologies as I work on projects in different domains. </p>
@@ -77,7 +77,7 @@
     <!-- Portfolio Grid Section -->
     <section class="portfolio bg-primary" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">What have I done...</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">What I have done...</h2>
         <div class="row mt-5">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-1">
