fixed color of menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Ashkan</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-secondary rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
@@ -68,7 +68,7 @@
               <p class="lead">I am a Management Engineering student at the University of Waterloo, and I have been captivated by software development since I built and released my first Android application in grade 12. The majority of my development experience has been in Java and Kotlin but I am quickly being exposed to new languages and frameworks while tackling new projects.</p>
             </div>
             <div class="col-lg-4 mr-auto">
-              <p class="lead">I have had many ambitions throughout my life. In the 8th grade I wanted to become a famous guitarist, but my dreams were crushed when my band mates moved away to different schools. My newest, and more realistic goal, is to pursue a career in Solutions Architecture. I enjoy this field since it will allow me the opportunity to be creative and learn new technologies as I work on projects in different domains. </p>
+              <p class="lead">I have had many ambitions throughout my life. In grade 8 I wanted to become a famous guitarist, but that fell apart when my band mates moved away. My newest, and more realistic goal, is to pursue a career in Solutions Architecture. I enjoy this field since it will allow me to be creative and learn new technologies as I work on projects in different domains. </p>
             </div>
           </div>
         </div>
