--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Portfolio Grid Section -->
     <section class="portfolio bg-primary" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">What I have done...</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">What I've done...</h2>
         <div class="row mt-5">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-1">
