--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
               <p class="lead">I have had many ambitions throughout my life. In grade 8 I wanted to become a famous guitarist, but that fell apart when my band mates moved away. My newest, and more realistic goal, is to pursue a career in Solutions Architecture. I enjoy this field since it will allow me to be creative and learn new technologies as I work on projects in different domains. </p>
             </div>
           </div>
+          <div class="row mt-5">
+            <div class="col-lg-12 text-center">
+                <a class="portfolio-item btn btn-lg btn-outline-light text-center rounded-pill py-3 px-3 " href="#resume-modal">View Resume</a>
+            </div>
+          </div>
+          
         </div>
       </section>
 
@@ -212,6 +218,24 @@
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Resume Modal -->
+    <div class="portfolio-modal mfp-hide" id="resume-modal">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">          
+              <img class="img-fluid mb-5 mt-4" src="img/resume.png" alt="">
+              <a class="btn btn-primary btn-lg rounded-pill" href="resource/Ashkan Abedian Software Resume.pdf" download="Ashkan_Abedian_resume">
+                Download PDF</a>
             </div>
           </div>
         </div>
