added links to play store

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid " src="img/portfolio/tens.png" alt="">
@@ -105,7 +105,7 @@
             <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-2">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/pocketcpm.png" alt="">
@@ -121,7 +121,7 @@
             <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/basicops.png" alt="">
@@ -139,7 +139,7 @@
                   <a class="portfolio-item d-block mx-auto mb-0" href="#portfolio-modal-4">
                     <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                       <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                        <i class="fa fa-search-plus fa-3x"></i>
+                        <i class="fa fa-search fa-3x"></i>
                       </div>
                     </div>
                     <img class="img-fluid" src="img/portfolio/connect.png" alt="">
@@ -215,6 +215,9 @@
               <img class="img-fluid mb-5 mt-4" src="img/portfolio/tens.png" alt="">
               <p class="lead text-left text-muted font-bold mb-5 mt-2">Java, SQLite</p>
               <p class="mb-5">If you are looking for a fast pace game that will keep you entertained for hours on end, look no further. The concept is simple. You will be given a series of numbers, you will have to select your own numbers as to make each column add up to ten. Simple math! Challenge friends to beat your high score, and begin to see numbers as opposites of each other than a string of digits.</p>
+              <div class="mb-5">
+                  <a class="btn-lg btn-primary bg-white text-secondary" href="https://play.google.com/store/apps/details?id=com.craft.tens">See it in the Play Store!</a>
+              </div>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -256,6 +259,9 @@
               <img class="img-fluid mb-5 mt-4" src="img/portfolio/pocketCPM.png" alt="">
               <p class="lead text-left text-muted font-bold mb-5 mt-2">Java, Kotlin, Dagger2, SQLite</p>              
               <p class="mb-5">Pocket CPM uses the Critical Path Method to process user provided data and provide key information that can be used to plan a project. By entering some basic information about a project and the tasks associated with it and their relationships, Pocket CPM is able to give you important dates for each task. This includes the earliest and latest start times as well as the earliest and latest finish times for each task. Pocket CPM is able to identify the critical path and denote slack times for individual tasks. In addition to providing the user with the ability to build a rich task tree, the user also has the ability to add and assign "Champions" to tasks who are individuals responsible for the completion of each task. Overall, Pocket CPM is a great tool for anyone looking to plan and approach a project in a structured manner.</p>
+              <div class="mb-5">
+                  <a class="btn-lg btn-primary bg-white text-secondary" href="https://play.google.com/store/apps/details?id=com.brewdevelopment.pocketcpm">See it in the Play Store!</a>
+              </div>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -279,6 +285,9 @@
               <img class="img-fluid mb-5 mt-4" src="img/portfolio/basicops.png" alt="">
               <p class="lead text-left text-muted font-bold mb-5 mt-2">Java, SQLite</p>                            
               <p class="mb-5">Help improve your children's math skills with this multi-level basic operations game. The game features a store where points earned through practice can be spent on badges. These badges are for you to associate with physical rewards and real life prizes. Provide your kids with the incentive they need to get into the game and start improving their mental math skills.</p>
+              <div class="mb-5">
+                  <a class="btn-lg btn-primary bg-white text-secondary" href="https://play.google.com/store/apps/details?id=com.brewdevelopment.pascalacademy">See it in the Play Store!</a>
+              </div>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
